Disable ci.yml (#10)
* Update ci.yml

* Update pr.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Azure Login
-      uses: Azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-    - name: npm install
-      run: npm ci
-    - name: Publish next function
-      uses: thomasf7/publish-next-function@master
-      with:
-        configuration: ${{ secrets.CONFIGURATION }}
-        app-settings: ${{ secrets.APPSETTINGS }}
+      - name: Placeholder
+        run: echo 'Hello world.'
+#     - name: Checkout
+#       uses: actions/checkout@v1
+#     - name: Azure Login
+#       uses: Azure/login@v1
+#       with:
+#         creds: ${{ secrets.AZURE_CREDENTIALS }}
+#     - name: npm install
+#       run: npm ci
+#     - name: Publish next function
+#       uses: thomasf7/publish-next-function@master
+#       with:
+#         configuration: ${{ secrets.CONFIGURATION }}
+#         app-settings: ${{ secrets.APPSETTINGS }}
